--- a/Symfony/templates/base.html.twig
+++ b/Symfony/templates/base.html.twig
@@ -27,7 +27,7 @@
         <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Roboto|Titillium+Web" rel="stylesheet">
         <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
-        <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
         {{ encore_entry_script_tags('app') }}
         <link rel="stylesheet" href="/build/app.css" />
@@ -191,7 +191,7 @@
                             <span class="social">
 
                                 <span class="sbutton fb-signin" data-bstsh-object="eventThrower" data-event="bookster:facebooklogin">
-                                    <i class="fab fa-facebook"></i><span>Facebook</span>
+                                    <i class="fa fa-facebook-official"></i><span>Facebook</span>
                                 </span>
 
                                 <span class="sbutton google-signin" data-bstsh-object="eventThrower" data-event="bookster:gpluslogin">
@@ -204,7 +204,7 @@
 
 {#
                                 <strong>Sign in via: </strong>
-                                <i class="fab fa-facebook" data-bstsh-object="eventThrower" data-event="bookster:facebooklogin"></i>
+                                <i class="fa fa-facebook" data-bstsh-object="eventThrower" data-event="bookster:facebooklogin"></i>
                                 <i class="google-plus" data-bstsh-object="eventThrower" data-event="bookster:gpluslogin"></i>
                                 <i class="bookstash" data-bstsh-object="eventThrower" data-event="bookster:loginrequest,bookster:bookstashlogin">B</i>
 #}
@@ -288,7 +288,7 @@
                     <div class="loginmain">
                         <span class="big">Sign In</span>
 
-                        <div class="facebook sociallog" data-social="facebook" data-bstsh-object="eventThrower" data-event="bookster:facebooklogin"><i class="fab fa-facebook"></i></div>
+                        <div class="facebook sociallog" data-social="facebook" data-bstsh-object="eventThrower" data-event="bookster:facebooklogin"><i class="fa fa-facebook-official"></i></div>
                         <div class="gplus sociallog" data-social="gplus" data-bstsh-object="eventThrower" data-event="bookster:gpluslogin"><i class="google-logo"></i></div>
                         <div class="sep"></div>
                         <div class="bookstash sociallog" data-social="bookstash" data-bstsh-object="eventThrower" data-event="bookster:bookstashlogin"></div>
