--- a/Symfony/templates/base.html.twig
+++ b/Symfony/templates/base.html.twig
@@ -30,7 +30,7 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
         {{ encore_entry_script_tags('app') }}
-        <link rel="stylesheet" href="/build/app.css" />
+        {{ encore_entry_link_tags('app') }}
 
         <script type="text/javascript">
             document.cred = [];
