--- a/Symfony/assets/css/style.less
+++ b/Symfony/assets/css/style.less
@@ -623,9 +623,8 @@ body[auth=anon] .trim .dropdowns .menu.user .shell .profile{
                             vertical-align: top;
                             height: 20px;
                             line-height: 20px;
-                            content: "\f3bf";
-                            content: "\f100";
-                            font: normal normal normal 12px/1 'Font Awesome 5 Free';
+                            content: "\f149";
+                            font: normal normal normal 12px/1 'FontAwesome';
                             margin: 6px 1px 0 10px;
                             -webkit-transform: rotate(90deg) scaleY(-1);
                             transform: rotate(90deg) scaleY(-1);
