--- a/Symfony/templates/admin.html.twig
+++ b/Symfony/templates/admin.html.twig
@@ -11,8 +11,8 @@
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
+        {{ encore_entry_link_tags('app') }}
         {{ encore_entry_script_tags('admin') }}
-        <link rel="stylesheet" href="/build/app.css" />
 
     </head>
     <body auth="auth">
