various small fixes

--- a/Symfony/assets/css/style.less
+++ b/Symfony/assets/css/style.less
@@ -2368,6 +2368,7 @@ body {
                     color:white;
                     font-size:24px;
                     line-height:30px;
+                    font-weight:bold;
                     padding: 15px 0 10px 20px;
                     a{
                         font-family: @fancy_font;
@@ -2424,9 +2425,9 @@ body {
                             padding:10px 20px 0 0;
                             width:300px;
                             text-align:right;
-                            font-style: italic;
                             line-height:24px;
-                            color:lighten(@slate, 10%);
+                            font-weight:bold;
+                            color:darken(@slate, 10%);
                         }
                     }
                 }
