--- a/Symfony/templates/mobile_base.html.twig
+++ b/Symfony/templates/mobile_base.html.twig
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="{{asset('favicon.ico')}}">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Roboto" rel="stylesheet">
 
     {% block title %}<title>Symfony React</title>{% endblock title %}
     {% block stylesheets %}
