bricks.js maybe ok

--- a/Symfony/assets/css/mobile/layout.scss
+++ b/Symfony/assets/css/mobile/layout.scss
@@ -1,7 +1,8 @@
 body{
     height: 100vh;
     min-height: 100vh;
-    background: radial-gradient(ellipse at 65% 50%,hsla(0,0%,100%,.4) 0,hsla(0,0%,100%,0) 100%),linear-gradient(90deg,hsla(0,0%,100%,.5) 0,rgba(75,75,75,.5)),linear-gradient(180deg,#17e243 0,#1789e2)
+    background: radial-gradient(ellipse at 65% 50%,hsla(0,0%,100%,.4) 0,hsla(0,0%,100%,0) 100%),linear-gradient(90deg,hsla(0,0%,100%,.5) 0,rgba(75,75,75,.5)),linear-gradient(180deg,#17e243 0,#1789e2);
+    background-attachment:fixed;
 }
 
 header{
