--- a/Symfony/templates/mobile_base.html.twig
+++ b/Symfony/templates/mobile_base.html.twig
@@ -17,7 +17,7 @@
   </head>
   <body>
 
-    <div class="main-container">
+    <div class="main-container" id="main-container">
         <div class="container">
             <div id="react-container">{% spaceless %}{% block body %}{% endblock %}{% endspaceless%}</div>
         </div>
