blog index page

--- a/Symfony/templates/mobile_base.html.twig
+++ b/Symfony/templates/mobile_base.html.twig
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="{{asset('favicon.ico')}}">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Roboto|Titillium Web|Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Roboto|Titillium+Web:400,400i,600|Material+Icons|Play:400,700|Teko:600,500" rel="stylesheet">
 
     {% block title %}<title>Symfony React</title>{% endblock title %}
     {% block stylesheets %}
